gitops/platform/base/observability-workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetrygen-traces
  namespace: observability
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: telemetrygen-traces
  template:
    metadata:
      labels:
        app.kubernetes.io/name: telemetrygen-traces
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: telemetrygen
          image: ghcr.io/open-telemetry/opentelemetry-collector-contrib/telemetrygen:0.111.0
          args:
            - traces
            - --otlp-endpoint=otel-collector.observability.svc.cluster.local:4317
            - --otlp-insecure
            - --duration=inf
            - --rate=1
            - --service=lab-checkout
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 96Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetrygen-metrics
  namespace: observability
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: telemetrygen-metrics
  template:
    metadata:
      labels:
        app.kubernetes.io/name: telemetrygen-metrics
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: telemetrygen
          image: ghcr.io/open-telemetry/opentelemetry-collector-contrib/telemetrygen:0.111.0
          args:
            - metrics
            - --otlp-endpoint=otel-collector.observability.svc.cluster.local:4317
            - --otlp-insecure
            - --duration=inf
            - --rate=1
            - --service=lab-checkout
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 96Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
